--- a/css/news-media.css
+++ b/css/news-media.css
@@ -35,6 +35,11 @@
   .article__text span {
     display: block;
   }
+  .card__title {
+    max-width: 500px;
+    font-size: 30px;
+    margin-right: 0;
+  }
 }
 
 @media (max-width: 768px) {
@@ -60,6 +65,22 @@
     font-size: 24px;
     line-height: 29px;
   }
+  .card__title {
+    font-size: 36px;
+  }
+  .footer {
+    padding: 17px 0 30px;
+  }
+  .footer__text {
+    margin: 8px 0 12px;
+  }
+  .footer__agreement-link {
+    display: block;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    margin-top: 10px;
+  }
 }
 
 @media (max-width: 450px) {
@@ -76,8 +97,8 @@
 }
 
 @media (max-width: 340px) {
-  .title {
-    max-width: 250px;
+  .news-articles__title {
+    max-width: 180px;
   }
   .article__text span {
     display: none;
