--- a/index-media.scss
+++ b/index-media.scss
@@ -166,17 +166,17 @@
 
    .catalog {
       padding-bottom: 40px;
+
       &__inner {
          margin-bottom: 40px;
-     }
+      }
+
       &__items-inner {
          grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
          gap: 40px 20px;
          margin-bottom: 40px;
       }
    }
-
-
 }
 
 @media (max-width: 560px) {
@@ -261,6 +261,19 @@
          margin-top: 0px;
       }
 
+   }
+   .description {
+      padding: 36px 0 43px;
+   
+      &__title {
+         font-size: 16px;
+         margin-bottom: 22px;
+      }
+   
+      &__text {
+         font-size: 12px;
+         margin-bottom: 20px;
+      }
    }
 }
 
