bug fixes, improvments

--- a/css/participation-media.css
+++ b/css/participation-media.css
@@ -75,6 +75,7 @@
     height: 25px;
     font-size: 14px;
     top: -5px;
+    padding: 5px 0;
   }
   .participation__howto-list {
     padding-left: 37px;
