--- a/participation-media.scss
+++ b/participation-media.scss
@@ -88,6 +88,7 @@
          height: 25px;
          font-size: 14px;
          top: -5px;
+         padding: 5px 0;
       }
 
       &__howto-list {
@@ -158,7 +159,6 @@
          border: 2px solid #A473E8;
          padding: 8px 9px 12px 8px;
       }
-
 
       &__howto-title,
       &__recent-title {
