--- a/css/index.css
+++ b/css/index.css
@@ -157,6 +157,9 @@
 .intro__giveaway-btn:hover {
   -webkit-box-shadow: 0px 0px 20px #A473E8;
           box-shadow: 0px 0px 20px #A473E8;
+}
+
+.intro__giveaway-btn:active {
   -webkit-transform: scale(1.05);
           transform: scale(1.05);
 }
@@ -610,7 +613,7 @@
   margin-bottom: 30px;
 }
 
-.description__text span {
+.description__text a {
   color: #65DFEA;
   text-decoration: underline;
 }
