--- a/index.scss
+++ b/index.scss
@@ -137,6 +137,8 @@
 
       &:hover {
          box-shadow: 0px 0px 20px #A473E8;
+      }
+      &:active{
          transform: scale(1.05);
       }
    }
@@ -487,7 +489,6 @@
    }
 }
 
-
 .description {
    padding: 100px 0 190px;
 
@@ -501,11 +502,13 @@
       font-weight: 500;
       font-size: 20px;
       margin-bottom: 30px;
-      span{
+
+      a {
          color: #65DFEA;
          text-decoration: underline;
       }
-      &:last-child{
+
+      &:last-child {
          margin-bottom: 0;
       }
    }
