--- a/css/global.css
+++ b/css/global.css
@@ -54,7 +54,7 @@ body {
 }
 
 .breadcrumb__list li a {
-  color: inherit;
+  color: #fff;
 }
 
 .breadcrumb__list li a:hover {
@@ -97,6 +97,11 @@ body {
   cursor: pointer;
   -webkit-transition: all .3s ease-out;
   transition: all .3s ease-out;
+  color: #fff;
+}
+
+.btn-prev-page a:visited {
+  color: #fff;
 }
 
 .btn-prev-page::before {
