--- a/css/reviews.css
+++ b/css/reviews.css
@@ -52,6 +52,8 @@
 }
 
 .reviews__btn-auth:hover {
+  -webkit-box-shadow: 0 0 5px #FFFFFF;
+          box-shadow: 0 0 5px #FFFFFF;
   border: 4px solid #d6d6d6;
   border-radius: 6px;
 }
@@ -78,6 +80,7 @@
 
 .reviews__input:hover {
   border-radius: 5px;
+  background-color: #62459c;
 }
 
 .reviews__input:focus {
@@ -201,7 +204,8 @@
 
 .reviews-comment__btn-reply:hover {
   border-radius: 4px;
-  background-color: #8d60cc;
+  -webkit-box-shadow: 0px 0px 20px #A473E8;
+          box-shadow: 0px 0px 20px #A473E8;
 }
 
 .reviews-comment__btn-reply:hover img {
@@ -221,6 +225,8 @@
 }
 
 .reviews-comment__btn-like:hover, .reviews-comment__btn-dislike:hover {
+  -webkit-box-sizing: 0 0 10px #fff;
+          box-sizing: 0 0 10px #fff;
   -webkit-transform: scale(1.05);
           transform: scale(1.05);
 }
