--- a/scss/card-product.scss
+++ b/scss/card-product.scss
@@ -89,7 +89,6 @@
 		width: 200px;
 		height: 55px;
 		background: #65DFEA;
-		box-shadow: 0px 0px 20px #65DFEA;
 		border-radius: 6px;
 		font-weight: 800;
 		font-size: 30px;
@@ -98,13 +97,15 @@
 		color: #fff;
 		transition: all .3s ease-out;
 
-		&:hover,
-		&:focus {
-			box-shadow: 0px 0px 25px #65DFEA;
+		&:hover {
+			box-shadow: 0px 0px 20px #65DFEA;
 			background: #63d7e1;
 			color: rgb(236, 236, 236);
 		}
 
+		&:active {
+			transform: scale(1.02);
+		}
 	}
 
 	&__price {
