--- a/scss/reviews.scss
+++ b/scss/reviews.scss
@@ -51,6 +51,7 @@
 		transition: all .3s ease-out;
 
 		&:hover {
+			box-shadow: 0 0 5px #FFFFFF;
 			border: 4px solid #d6d6d6;
 			border-radius: 6px;
 		}
@@ -76,6 +77,8 @@
 
 		&:hover {
 			border-radius: 5px;
+			background-color: #62459c;
+
 		}
 
 		&:focus {
@@ -198,7 +201,8 @@
 
 		&:hover {
 			border-radius: 4px;
-			background-color: #8d60cc;
+			box-shadow: 0px 0px 20px #A473E8;
+			// background-color: #8d60cc;
 
 			img {
 				transform: rotate(-10deg);
@@ -217,6 +221,8 @@
 		transition: all .3s ease;
 
 		&:hover {
+			box-sizing: 0 0 10px #fff;
+
 			transform: scale(1.05);
 		}
 	}
