--- a/css/global.css
+++ b/css/global.css
@@ -8,6 +8,7 @@ body {
   font-family: Montserrat;
   background: -webkit-gradient(linear, left top, right top, from(rgba(37, 21, 88, 0.2)), to(rgba(147, 111, 221, 0.2))), #26155B;
   background: linear-gradient(90deg, rgba(37, 21, 88, 0.2) 0%, rgba(147, 111, 221, 0.2) 100%), #26155B;
+  padding-top: 90px;
 }
 
 /* Ограничивающий контейнер */
@@ -135,6 +136,9 @@ body {
 }
 
 @media (max-width: 560px) {
+  body {
+    padding-top: 60px;
+  }
   .title {
     font-size: 24px;
   }
