--- a/css/header.css
+++ b/css/header.css
@@ -1,13 +1,20 @@
-.header {
-  max-width: 100%;
-  max-height: 95px;
-  padding: 9px 0;
-  background: #A374E8;
+.no-scroll {
+  overflow-y: hidden;
 }
 
-.header * {
-  -webkit-transition: all .3s ease-out;
-  transition: all .3s ease-out;
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  max-width: 100%;
+  max-height: 95px;
+  width: 100%;
+  padding: 9px 0;
+  z-index: 8;
+  background: #A374E8;
+  -webkit-transition: 0.2s ease;
+  transition: 0.2s ease;
+  /* &--active {} */
 }
 
 .header__row {
