--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,13 +1,20 @@
-.header {
+.no-scroll {
+	overflow-y: hidden;
+}
 
+.header {
+	position: fixed;
+	top: 0;
+	left: 0;
 	max-width: 100%;
 	max-height: 95px;
+	width: 100%;
 	padding: 9px 0;
+	z-index: 8;
 	background: #A374E8;
+	transition: 0.2s ease;
 
-	* {
-		transition: all .3s ease-out;
-	}
+	/* &--active {} */
 
 	&__row {
 		display: flex;
@@ -121,7 +128,7 @@
 		}
 	}
 
-	
+
 }
 
 
@@ -178,7 +185,6 @@
 	transition: transform 0.2s ease-in;
 }
 
-
 /* NAv Close */
 .nav-btn-close .nav-btn-icon {
 	background-color: transparent;
@@ -218,7 +224,6 @@
 	transition: max-height 0.7s ease-out;
 
 }
-
 
 .mobile-nav .mobile-nav__item ul {
 	flex-direction: column;
