--- a/css/style.css
+++ b/css/style.css
@@ -1074,7 +1074,7 @@ a {
 	-webkit-box-align: center;
 	-ms-flex-align: center;
 	align-items: center;
-	margin-bottom: 35px;
+	margin-bottom: 15px;
 }
 
 .card__sale {
@@ -1087,13 +1087,14 @@ a {
 	-webkit-box-pack: center;
 	-ms-flex-pack: center;
 	justify-content: center;
-	width: 167px;
+	width: 120px;
 	height: 60px;
 	background: #FE1717;
 	border-radius: 6px;
 	font-weight: 800;
-	font-size: 30px;
+	font-size: 26px;
 	line-height: 1.3;
+	margin-top: -100px;
 }
 
 .card__item {
@@ -1103,6 +1104,7 @@ a {
 }
 
 .card__title {
+	max-width: 650px;
 	font-weight: 800;
 	font-size: 80px;
 	line-height: 1.17;
