--- a/css/style.css
+++ b/css/style.css
@@ -2317,7 +2317,7 @@ a {
 }
 
 .description {
-	padding: 100px 0 190px;
+	padding-bottom: 190px;
 }
 
 .description__title {
@@ -2326,13 +2326,15 @@ a {
 	margin-bottom: 38px;
 }
 
-.description__text>a {
-	font-weight: 500;
-	font-size: 20px;
+.description__text{
 	margin-bottom: 30px;
+	font-weight: 500;
 }
 
 .description__text a {
+	font-weight: 500;
+	font-size: 20px;
+	margin-bottom: 30px;
 	color: #65DFEA;
 	text-decoration: underline;
 }
@@ -2362,10 +2364,6 @@ a {
 
 	.intro__info {
 		margin-bottom: 60px;
-	}
-
-	.intro__giveaway {
-		/* margin-left: auto; */
 	}
 
 	.catalog__nav {
@@ -2587,7 +2585,7 @@ a {
 	}
 
 	.description {
-		padding: 36px 0 43px;
+		padding-bottom: 43px;
 	}
 
 	.description__title {
@@ -2595,7 +2593,8 @@ a {
 		margin-bottom: 22px;
 	}
 
-	.description__text {
+	.description__text,
+	.description__text a {
 		font-size: 12px;
 		margin-bottom: 20px;
 	}
