--- a/css/style.css
+++ b/css/style.css
@@ -2511,6 +2511,9 @@ a {
 		gap: 40px 20px;
 		margin-bottom: 40px;
 	}
+	.description {
+		padding-bottom:80px;
+	}
 }
 
 @media (max-width: 560px) {
