--- a/css/style.css
+++ b/css/style.css
@@ -1707,6 +1707,7 @@ a {
 	.article__text span {
 		display: none;
 	}
+
 	.card__title {
 		font-size: 16px;
 		line-height: 1.2;
@@ -2346,7 +2347,7 @@ a {
 	margin-bottom: 38px;
 }
 
-.description__text{
+.description__text {
 	margin-bottom: 30px;
 	font-weight: 500;
 }
@@ -2531,8 +2532,9 @@ a {
 		gap: 40px 20px;
 		margin-bottom: 40px;
 	}
+
 	.description {
-		padding-bottom:80px;
+		padding-bottom: 80px;
 	}
 }
 
@@ -3563,16 +3565,16 @@ a {
 	-webkit-box-pack: center;
 	-ms-flex-pack: center;
 	justify-content: center;
-	max-width: 618px;
+	max-width: 518px;
 	width: 100%;
 	height: 84px;
 	margin: 0 auto;
 	margin-bottom: 43px;
-	padding: 10px 30px;
+	padding: 10px 20px;
 	background: #A473E8;
 	border-radius: 4px;
 	font-weight: 800;
-	font-size: 30px;
+	font-size: 24px;
 	line-height: 1;
 	text-transform: uppercase;
 	color: #FFFFFF;
@@ -3595,15 +3597,6 @@ a {
 	max-width: 1580px;
 	width: 100%;
 	color: #fff;
-	/* step 2 - cards (выбор карты) */
-	/* 	// .payment-form__title */
-	/* // .payment-form__text */
-	/* // .payment-form__email */
-	/* // .payment-form__input */
-	/* // .payment-form__prompt */
-	/* 	// .payment-form__promocode */
-	/* // .payment-form__btn-check */
-	/* 	.payment-form__btn-next */
 }
 
 .payment-form-step {
@@ -3626,10 +3619,9 @@ a {
 	-ms-flex-wrap: wrap;
 	flex-wrap: wrap;
 	gap: 20px;
-	margin-top: 35px;
-	padding: 30px 40px 50px;
-	margin-bottom: 70px;
-	border: 6px solid #FFFFFF;
+	padding: 30px 30px;
+	margin-bottom: 40px;
+	border: 4px solid #FFFFFF;
 	border-radius: 6px;
 }
 
@@ -3647,39 +3639,33 @@ a {
 	-webkit-box-direction: normal;
 	-ms-flex-direction: column;
 	flex-direction: column;
-	padding: 200px 150px 73px;
+	padding: 40px 70px;
 }
 
-@media (max-width: 992px) {
-	.payment-form__container {
-		padding: 50px 12px;
-	}
-}
 
 .payment-form__box {
 	max-width: 619px;
 	width: 100%;
-	margin-top: 30px;
-	margin-bottom: 80px;
-	padding: 40px 79px 40px 64px;
+	margin-bottom: 30px;
+	padding: 30px 50px;
 	background: #7052AD;
 	border-radius: 6px;
 }
 
 .payment-form__title {
-	margin-bottom: 40px;
+	margin-bottom: 30px;
 	text-align: center;
 	font-weight: 800;
-	font-size: 48px;
+	font-size: 36px;
 	line-height: 1;
 	text-transform: uppercase;
 }
 
 .payment-form__text {
 	max-width: 876px;
-	margin-bottom: 66px;
+	margin-bottom: 30px;
 	font-weight: 400;
-	font-size: 24px;
+	font-size: 22px;
 	line-height: 1;
 }
 
@@ -3699,9 +3685,9 @@ a {
 .payment-form__input {
 	max-width: 1050px;
 	width: 100%;
-	height: 84px;
-	margin-bottom: 30px;
-	padding: 28px 39px;
+	height: 70px;
+	margin-bottom: 20px;
+	padding: 25px 20px;
 	border: 6px solid #A473E8;
 	font-weight: 400;
 	font-size: 24px;
@@ -3711,9 +3697,9 @@ a {
 }
 
 .payment-form__prompt {
-	margin-bottom: 66px;
+	margin-bottom: 30px;
 	font-weight: 500;
-	font-size: 26px;
+	font-size: 22px;
 	line-height: 32px;
 }
 
@@ -3730,13 +3716,15 @@ a {
 	-webkit-box-align: center;
 	-ms-flex-align: center;
 	align-items: center;
-	gap: 30px;
+	gap: 20px;
+	margin-bottom: 20px;
 }
 
 .payment-form__promocode input {
 	max-width: 708px;
 	width: 100%;
-	margin-top: 30px;
+	margin-top: 0;
+	margin-bottom: 0;
 }
 
 .payment-form__btn-check {
@@ -3749,14 +3737,13 @@ a {
 	-webkit-box-pack: center;
 	-ms-flex-pack: center;
 	justify-content: center;
-	max-width: 330px;
+	max-width: 260px;
 	width: 100%;
-	height: 84px;
+	height: 65px;
 	background: #65DFEA;
 	border-radius: 6px;
 	font-weight: 800;
-	font-size: 30px;
-	line-height: 37px;
+	font-size: 24px;
 	color: #ffff;
 	text-transform: uppercase;
 	-webkit-transition: all .3s ease-out;
@@ -3776,13 +3763,11 @@ a {
 	-ms-flex-pack: center;
 	justify-content: center;
 	font-weight: 400;
-	font-size: 24px;
-	line-height: 29px;
 }
 
 /* .payment-form__footer */
 .payment-form-footer {
-	padding: 100px 160px 66px 160px;
+	padding: 30px 60px;
 	background: #A374E8;
 }
 
@@ -3819,7 +3804,6 @@ a {
 	display: block;
 	font-weight: 600;
 	font-size: 24px;
-	line-height: 29px;
 }
 
 .payment-form-footer__link+.payment-form-footer__link {
@@ -3841,7 +3825,7 @@ a {
 /* 3 step оплата(ввод данных) */
 .payment-form-pay__card-number {
 	display: block;
-	margin-bottom: 30px;
+	margin-bottom: 15px;
 }
 
 .payment-form-pay label {
@@ -3851,8 +3835,7 @@ a {
 .payment-form-pay label p {
 	margin-bottom: 15px;
 	font-weight: 400;
-	font-size: 24px;
-	line-height: 29px;
+	font-size: 18px;
 }
 
 .payment-form-pay__row {
@@ -3862,33 +3845,34 @@ a {
 	-webkit-box-align: center;
 	-ms-flex-align: center;
 	align-items: center;
-	gap: 24px;
-	margin-bottom: 25px;
+	gap: 20px;
+	margin-bottom: 15px;
 }
 
 .payment-form-pay__validity {
 	-webkit-box-flex: 1;
 	-ms-flex: 1 1 287px;
-	flex: 1 1 287px;
+	flex: 1 1 auto;
 }
 
 .payment-form-pay__cvc {
 	-webkit-box-flex: 1;
 	-ms-flex: 1 1 165px;
-	flex: 1 1 165px;
+	flex: 1 1 150px;
 }
 
 /* CUSTOM CHECKBOXES/CARDS/RADIO */
 .container-radio {
 	position: relative;
-	width: 250px;
-	height: 250px;
+	width: 100%;
+	height: 100px;
+	flex: 1 1 18%;
 }
 
 .container-radio .radio-fake svg,
 .container-radio .radio-fake img {
-	width: 50%;
-	height: 50%;
+	width: 70%;
+	height: 70%;
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -3901,8 +3885,8 @@ a {
 .container-radio .radio-fake img.visa,
 .container-radio .radio-fake img.mir,
 .container-radio .radio-fake img.mastercard {
-	width: 100%;
-	height: 100%;
+	width: 80%;
+	height: 80%;
 }
 
 /* Form checkbox custom */
@@ -3996,57 +3980,110 @@ a {
 
 @media (max-width: 1440px) {
 	.payment-form__container {
-		padding: 100px 100px 70px;
+		padding: 30px 20px;
 	}
+
+	.payment-form__title {
+		font-size: 26px;
+		margin-bottom: 15px;
+	}
+
+	.payment-form__text {
+		font-size: 16px;
+		margin-bottom: 15px;
+	}
+
+	.payment-form__input {
+		padding: 22px 15px;
+		height: 40px;
+		border-width: 4px;
+	}
+
+	.payment-form__prompt {
+		font-size: 18px;
+		margin-bottom: 15px;
+	}
+
+	.btn--purple {
+		max-width: 340px;
+		height: 50px;
+		font-size: 18px;
+		margin-bottom: 15px;
+	}
+
+	.payment-form__btn-check {
+		height: 50px;
+		font-size: 18px;
+	}
+
+	.container-label {
+		font-size: 14px;
+		padding-left: 40px;
+	}
+
+	.checkmark {
+		width: 30px;
+		height: 30px;
+	}
+
+	.container-label .checkmark:after {
+		width: 20px;
+		height: 20px;
+		background-size: contain;
+	}
+
 }
 
 @media (max-width: 1024px) {
 	.payment-form__container {
-		padding: 80px 50px 70px;
+		padding: 30px 20px 30px;
 	}
 
 	.payment-form__title {
-		font-size: 36px;
+		font-size: 24px;
 	}
 
 	.payment-form__text,
 	.payment-form__prompt {
-		font-size: 18px;
-		line-height: 1.2;
-		margin-bottom: 40px;
+		font-size: 16px;
+		margin-bottom: 15px;
 	}
 
-	.payment-form__btn-next {
-		max-width: 450px;
-		font-size: 24px;
+	.payment-form__input {
+		margin-bottom: 10px;
+		padding: 20px 10px;
+	}
+
+	.payment-form-pay label p {
+		margin-bottom: 5px;
 	}
 
 	.payment-form__btn-check {
-		max-width: 250px;
-		font-size: 22px;
+		max-width: 200px;
+		font-size: 18px;
 	}
 
 	.payment-form__footer {
-		padding: 40px 60px;
+		padding: 20px 30px;
 	}
 
 	.payment-form .payment-form-footer__link {
-		font-size: 18px;
+		font-size: 16px;
 		line-height: 1;
 	}
 
 	.payment-form .payment-form-footer__license {
-		font-size: 14px;
+		font-size: 12px;
 	}
 
 	.container-label {
-		font-size: 18px;
-		padding-left: 40px;
+		font-size: 16px;
+		padding-left: 35px;
 	}
 
 	.container-label .checkmark {
-		height: 30px;
-		width: 30px;
+		height: 25px;
+		width: 25px;
 	}
 
 	.container-label .checkmark::after {
@@ -4056,12 +4093,14 @@ a {
 	}
 
 	.payment-form__cards {
-		padding: 50px 30px 60px;
+		padding: 30px 20px 40px;
+		margin-bottom: 30px;
+		border-width: 3px;
 	}
 
 	.container-radio {
-		width: 100px;
-		height: 100px;
+		width: 50px;
+		height: 90px;
 		-webkit-box-flex: 1;
 		-ms-flex: 1 1 19%;
 		flex: 1 1 19%;
@@ -4081,8 +4120,8 @@ a {
 	.container-radio .radio-fake img.visa,
 	.container-radio .radio-fake img.mir,
 	.container-radio .radio-fake img.mastercard {
-		width: 90%;
-		height: 90%;
+		width: 80%;
+		height: 80%;
 	}
 }
 
@@ -4104,6 +4143,14 @@ a {
 		gap: 10px;
 	}
 
+	.payment-form__input {
+		font-size: 16px;
+	}
+
+	.payment-form__promocode {
+		margin-bottom: 0;
+	}
+
 	.payment-form__promocode .payment-form__input {
 		margin-bottom: 15px;
 	}
@@ -4114,7 +4161,7 @@ a {
 	}
 
 	.payment-form__container {
-		padding: 60px 30px 50px;
+		padding: 30px 30px;
 	}
 
 	.payment-form__agree {
@@ -4125,9 +4172,22 @@ a {
 
 @media (max-width: 680px) {
 	.payment-form__box {
-		padding: 40px 30px;
-		margin-bottom: 32px;
+		padding: 20px 15px;
+		margin-bottom: 25px;
 		margin-top: 0;
+	}
+
+	.payment-form__title {
+		font-size: 20px;
+		margin-bottom: 15px;
+	}
+
+	.payment-form__input {
+		height: 30px;
+	}
+
+	.payment-form-pay label p {
+		font-size: 14px;
 	}
 }
 
@@ -4144,7 +4204,7 @@ a {
 
 @media (max-width: 560px) {
 	.payment-form__container {
-		padding: 30px 20px 30px;
+		padding: 30px 20px;
 	}
 
 	.payment-form__title {
@@ -4164,6 +4224,10 @@ a {
 		height: 35px;
 		padding: 8px 11px;
 		border-width: 2px;
+	}
+
+	.payment-form__prompt {
+		line-height: 1;
 	}
 
 	.payment-form__promocode {
@@ -4276,13 +4340,13 @@ a {
 	}
 
 	.payment-form__cards {
-		margin-bottom: 42px;
+		margin-bottom: 30px;
 		gap: 15px;
 	}
 
 	.container-radio {
-		width: 70px;
-		height: 70px;
+		width: 60px;
+		height: 60px;
 		-webkit-box-flex: 1;
 		-ms-flex: 1 1 auto;
 		flex: 1 1 auto;
@@ -4298,8 +4362,8 @@ a {
 	.container-radio .radio-fake img.visa,
 	.container-radio .radio-fake img.mir,
 	.container-radio .radio-fake img.mastercard {
-		width: 100%;
-		height: 100%;
+		width: 70%;
+		height: 70%;
 	}
 
 	.payment-form-pay label p {
@@ -4315,7 +4379,7 @@ a {
 
 @media (max-width: 380px) {
 	.payment-form__cards {
-		margin-bottom: 42px;
+		margin-bottom: 20px;
 		gap: 10px;
 	}
 
@@ -4329,8 +4393,8 @@ a {
 	}
 
 	.container-radio .radio-fake img {
-		width: 70%;
-		height: 70%;
+		width: 60%;
+		height: 60%;
 	}
 
 	.container-radio .radio-fake img.yandex,
@@ -4338,8 +4402,8 @@ a {
 	.container-radio .radio-fake img.visa,
 	.container-radio .radio-fake img.mir,
 	.container-radio .radio-fake img.mastercard {
-		width: 100%;
-		height: 100%;
+		width: 70%;
+		height: 70%;
 	}
 }
 
