--- a/css/style.css
+++ b/css/style.css
@@ -1762,7 +1762,7 @@ a {
 }
 
 .intro {
-	padding: 60px 0;
+	padding-top: 60px;
 	background-image: url("../images/index/decor-polygon.svg");
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -2481,9 +2481,6 @@ a {
 }
 
 @media (max-width: 768px) {
-	.intro {
-		padding: 60px 0 40px;
-	}
 
 	.intro__info-title {
 		font-size: 24px;
@@ -2673,7 +2670,7 @@ a {
 
 @media (max-width: 450px) {
 	.intro {
-		padding: 30px 0;
+		padding-top: 30px;
 	}
 
 	.intro__info {
@@ -4616,6 +4613,7 @@ a {
 .left-side .current__giveaway-timer {
 	margin-bottom: 20px;
 	padding-left: 10px;
+	display: flex;
 }
 
 .left-side .table {
@@ -5010,7 +5008,7 @@ a {
 	}
 
 	.current__giveaway-info {
-		padding-bottom: 0;
+		padding-bottom:40px;
 		width: 100%;
 	}
 
