--- a/css/style.css
+++ b/css/style.css
@@ -920,14 +920,23 @@ a {
 	transition: color 0.4s ease-out;
 }
 
-
-@media (max-width: 1300px) {
+@media (max-width: 1440px) {
 	.header__menu {
 		gap: 30px;
 	}
+}
+
+@media (max-width: 1300px) {
+	.header__menu {
+		gap: 20px;
+	}
 
 	.header__btns {
-		gap: 20px;
+		gap: 15px;
+	}
+
+	.header__logo img {
+		max-width: 300px;
 	}
 }
 
