--- a/css/style.css
+++ b/css/style.css
@@ -1259,7 +1259,7 @@ a {
 	content: "★★★★★";
 	position: absolute;
 	width: 100%;
-	height: 100%;
+	height: 120%;
 	top: 0;
 	left: 0;
 	color: #ffd300;
@@ -2849,7 +2849,7 @@ a {
 	margin: 28px 0;
 	width: 320px;
 	height: 50px;
-	padding: 12px 30px;
+	padding: 12px 25px;
 	border: 4px solid #FFFFFF;
 	border-radius: 4px;
 	background: transparent;
@@ -3006,7 +3006,8 @@ a {
 		justify-content: center;
 		font-size: 14px;
 		width: 240px;
-		padding: 5px 24px;
+		height: 50px;
+		padding: 5px 15px;
 	}
 }
 
@@ -3102,14 +3103,11 @@ a {
 		margin-left: 6px;
 	}
 
-	.reviews-comment__counter {
-		font-size: 8px;
-	}
-
 	.reviews__comment-value {
-		width: 140px;
+		width: 150px;
 		height: 40px;
 		font-size: 10px;
+		padding: 5px 8px;
 		margin-bottom: 20px;
 		border: 2px solid #FFFFFF;
 	}
@@ -4703,8 +4701,6 @@ a {
 	font-size: 40px;
 }
 
-.giveaway__item {}
-
 .giveaway__subtitle {
 	position: relative;
 	display: inline-block;
@@ -5243,6 +5239,7 @@ a {
 		align-items: center;
 		flex-direction: column;
 	}
+
 	.giveaway__timer {
 		text-shadow: 0px 2px 1px rgba(0, 0, 0, 0.5);
 	}
@@ -5283,7 +5280,7 @@ a {
 	.giveaway__timer {
 		max-width: 130px;
 		font-size: 34px;
-			text-shadow: 0px 4px 1px rgba(0, 0, 0, 0.5);
+		text-shadow: 0px 4px 1px rgba(0, 0, 0, 0.5);
 	}
 
 	.giveaway__card {
